--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "dotenv": "^11.0.0",
     "express": "^4.17.2",
+    "http-server": "^14.1.0",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.15"
   }
